--- a/EasyLearn/UI/CustomControls/Relations/CommonRelationView.xaml
+++ b/EasyLearn/UI/CustomControls/Relations/CommonRelationView.xaml
@@ -8,7 +8,7 @@
              xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
              mc:Ignorable="d"
              Visibility="{Binding IsVisible, Converter={converters:ReverseCollapseConverter}}">
-    <Border BorderThickness="0.6" 
+    <Border BorderThickness="{Binding CardBorderThickness}" 
             BorderBrush="{DynamicResource MainColorLight}" 
             Background="{DynamicResource EasyGrayLight}" 
             Margin="12 12 0 0" 
@@ -35,6 +35,7 @@
                        Style="{DynamicResource MaterialDesignHeadline5TextBlock}" 
                        FontSize="19"
                        Text="{Binding RussianValue}" 
+                       Foreground="{DynamicResource EasyBlack}"
                        HorizontalAlignment="Center" 
                        VerticalAlignment="Center" 
                        Margin="20 8"
@@ -44,6 +45,7 @@
             <TextBlock Grid.Row="0" Grid.Column="2" 
                        Style="{DynamicResource MaterialDesignHeadline5TextBlock}" 
                        FontSize="19" 
+                       Foreground="{DynamicResource EasyBlack}"
                        Text="{Binding EnglishValue}" 
                        HorizontalAlignment="Center" 
                        VerticalAlignment="Center" 
@@ -158,7 +160,7 @@
             <Button Style="{DynamicResource MaterialDesignFlatButton}"
                     HorizontalAlignment="Right"
                     VerticalAlignment="Top"
-                    Foreground="{DynamicResource EasyGray}"                 
+                    Foreground="{DynamicResource EasyBlack}"                 
                     Width="18"
                     Height="18"
                     Padding="1"
