--- a/EasyLearn/UI/CustomControls/Dictionaries/CommonDictionaryView.xaml
+++ b/EasyLearn/UI/CustomControls/Dictionaries/CommonDictionaryView.xaml
@@ -80,6 +80,7 @@
                                                 <TextBlock VerticalAlignment="Center" 
                                                            HorizontalAlignment="Center"
                                                            Text="{Binding Name}" 
+                                                           Foreground="{DynamicResource EasyBlack}"
                                                            d:Text="Test"
                                                            FontFamily="Arial"
                                                            FontSize="15"/>
@@ -116,7 +117,7 @@
 
                     <Grid.RowDefinitions>
                         <RowDefinition Height="Auto" />
-                        <RowDefinition Height="0.8*" />
+                        <RowDefinition Height="0.6*" />
                         <RowDefinition Height="2*"/>
                         <RowDefinition Height="Auto" MaxHeight="3"/>
                         <RowDefinition Height="Auto" />
@@ -153,15 +154,18 @@
                     </materialDesign:ColorZone>
 
                     <!--Редактировать название словаря-->
-                    <TextBox materialDesign:HintAssist.Hint="Название" 
-                             materialDesign:HintAssist.IsFloating="True"
-                             Grid.Row="1"         
+                    <TextBox Grid.Row="1"
+                             Padding="15 15 14 0"
+                             FontFamily="Arial"
                              Background="{DynamicResource MainColorSuperLight}"
                              BorderBrush="{DynamicResource MainColor}"
+                             Style="{DynamicResource MaterialDesignFilledTextBox}"
                              HorizontalAlignment="Stretch"
-                             materialDesign:ValidationAssist.Suppress="True"
                              VerticalAlignment="Stretch"
-                             Style="{DynamicResource MaterialDesignFilledTextBox}">
+                             materialDesign:ValidationAssist.Suppress="True"
+                             materialDesign:HintAssist.IsFloating="False"
+                             materialDesign:HintAssist.FontFamily="Arial"
+                             materialDesign:HintAssist.Hint="Название" >
 
 
                         <TextBox.Text>
