--- a/EasyLearn/UI/CustomControls/Dictionaries/VerbPrepositionDictionaryView.xaml
+++ b/EasyLearn/UI/CustomControls/Dictionaries/VerbPrepositionDictionaryView.xaml
@@ -56,6 +56,7 @@
                                                  VerticalAlignment="Center"
                                                  Kind="DotsGrid" 
                                                  Margin="0"
+                                                 Foreground="{DynamicResource EasyBlack}"
                                                  Width="22" Height="22"/>
 
                         <i:Interaction.Triggers>
@@ -84,6 +85,7 @@
                                                            HorizontalAlignment="Center"
                                                            Text="{Binding Name}" 
                                                            d:Text="Test"
+                                                           Foreground="{DynamicResource EasyBlack}"
                                                            FontFamily="Arial"
                                                            FontSize="15"/>
                                             </Border>
@@ -118,7 +120,7 @@
 
                     <Grid.RowDefinitions>
                         <RowDefinition Height="Auto" />
-                        <RowDefinition Height="0.8*" />
+                        <RowDefinition Height="0.6*" />
                         <RowDefinition Height="2*"/>
                         <RowDefinition Height="Auto" MaxHeight="3"/>
                         <RowDefinition Height="Auto" />
@@ -153,15 +155,19 @@
                     </materialDesign:ColorZone>
 
                     <!--Редактировать название словаря-->
-                    <TextBox materialDesign:HintAssist.Hint="Название" 
-                             materialDesign:HintAssist.IsFloating="True"
-                             Grid.Row="1"         
+                    <TextBox Grid.Row="1"      
+                             Padding="15 15 14 0"
+                             FontFamily="Arial"
+                             Foreground="{DynamicResource EasyBlack}"
                              Background="{DynamicResource MainColorSuperLight}"
                              BorderBrush="{DynamicResource MainColor}"
+                             Style="{DynamicResource MaterialDesignFilledTextBox}"
                              HorizontalAlignment="Stretch"
-                             materialDesign:ValidationAssist.Suppress="True"
                              VerticalAlignment="Stretch"
-                             Style="{DynamicResource MaterialDesignFilledTextBox}">
+                             materialDesign:ValidationAssist.Suppress="True"
+                             materialDesign:HintAssist.FontFamily="Arial"
+                             materialDesign:HintAssist.IsFloating="False"
+                             materialDesign:HintAssist.Hint="Название" >
 
                         <TextBox.Text>
                             <Binding Path="EditNameFieldValue" Mode="TwoWay" UpdateSourceTrigger="PropertyChanged">
