--- a/EasyLearn/UI/Pages/EditVerbPrepositionDictionaryPage.xaml
+++ b/EasyLearn/UI/Pages/EditVerbPrepositionDictionaryPage.xaml
@@ -17,7 +17,7 @@
 
             <materialDesign:DrawerHost OpenMode="Standard" materialDesign:ShadowAssist.ShadowDepth="Depth0">
                 <materialDesign:DrawerHost.TopDrawerContent>
-                    <Border Background="{DynamicResource EasyGrayLight}" Height="58" BorderBrush="{DynamicResource MainColor}" BorderThickness="0.4 0 0 0.6">
+                    <Border Background="{DynamicResource EasyGrayLight}" Height="62" BorderBrush="{DynamicResource MainColor}" BorderThickness="0.4 0 0 0.6">
                         <Grid VerticalAlignment="Stretch">
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition/>
@@ -29,7 +29,7 @@
                             <TextBox Style="{DynamicResource EasyTextBox}"
                                      Width="245"
                                      Grid.Column="1"
-                                     Padding="14 11"
+                                     Padding="14 14 14 0"
                                      VerticalAlignment="Center"
                                      InputLanguageManager.InputLanguage="ru-RU"
                                      materialDesign:HintAssist.Hint="Искать"
@@ -60,7 +60,7 @@
 
                             </Button>
 
-                            <Button Style="{StaticResource EasyCommonButton}" Margin="6 0 0 0" Height="38" Width="38" Grid.Column="2"
+                            <Button Style="{StaticResource EasyCommonButton}" Margin="6 0 0 0" Height="44" Width="44" Grid.Column="2"
                                     Command="{Binding SearchVerbPrepositionsCommand}">
                                 <materialDesign:PackIcon Kind="Magnify" 
                                                          Height="28" Width="28"
@@ -70,7 +70,7 @@
 
                             </Button>
 
-                            <Button Style="{StaticResource EasyCancelButton}" Margin="0 0 15 0" Height="38" Width="38"
+                            <Button Style="{StaticResource EasyCancelButton}" Margin="0 0 15 0" Height="44" Width="44"
                                     Grid.Column="4"
                                     Padding="0"
                                     Command="{x:Static materialDesign:DialogHost.OpenDialogCommand}">
@@ -155,7 +155,7 @@
                     <Button Visibility="Collapsed" Name="openTopMenuButton" Command="{x:Static materialDesign:DrawerHost.OpenDrawerCommand}"/>
                     <Button Visibility="Collapsed" Name="closeTopMenuButton" Command="{x:Static materialDesign:DrawerHost.CloseDrawerCommand}"/>
                     <!--Контейнер для содержания всех VerbPreposition-->
-                    <ScrollViewer Grid.Row="1">
+                    <ScrollViewer Grid.Row="1" materialDesign:ScrollViewerAssist.IsAutoHideEnabled="True">
                         <ItemsControl ItemsSource="{Binding VerbPrepositionViews}" 
                                       VerticalContentAlignment="Top"
                                       HorizontalContentAlignment="Left">
@@ -203,7 +203,7 @@
                                      HorizontalAlignment="Left"
                                      materialDesign:HintAssist.IsFloating="False"
                                      materialDesign:ValidationAssist.Suppress="True"
-                                     Padding="14 11"
+                                     Padding="14 14 14 0"
                                      Margin="0 0 14 0"
                                      Grid.ColumnSpan="3"
                                      InputLanguageManager.InputLanguage="ru-RU"
@@ -227,7 +227,7 @@
 
                             </TextBox>
 
-                            <Button Style="{StaticResource EasyCommonButton}" Height="39" Width="39"
+                            <Button Style="{StaticResource EasyCommonButton}" Height="44" Width="44"
                                     HorizontalAlignment="Right"
                                     VerticalAlignment="Center"
                                     ToolTip="Сбросить прогресс"
@@ -242,10 +242,11 @@
                                     <i:EventTrigger EventName="Click">
                                         <i:InvokeCommandAction Command="{x:Static materialDesign:DialogHost.CloseDialogCommand}"/>
                                         <i:InvokeCommandAction Command="{Binding UwResetVerbPrepositionRatingCommand}"/>
+                                        <i:InvokeCommandAction Command="{Binding EnableAppWindowNavigationBarCommand}"/>
                                     </i:EventTrigger>
                                 </i:Interaction.Triggers>
                             </Button>
-                            <Button Style="{StaticResource EasyCancelButton}" Height="38" Width="38"
+                            <Button Style="{StaticResource EasyCancelButton}" Height="44" Width="44"
                                     HorizontalAlignment="Right"
                                     VerticalAlignment="Center"
                                     ToolTip="Удалить"
@@ -261,6 +262,7 @@
                                     <i:EventTrigger EventName="Click">
                                         <i:InvokeCommandAction Command="{Binding DeleteVerbPrepositionCommand}"/>
                                         <i:InvokeCommandAction Command="{x:Static materialDesign:DialogHost.CloseDialogCommand}"/>
+                                        <i:InvokeCommandAction Command="{Binding EnableAppWindowNavigationBarCommand}"/>
                                     </i:EventTrigger>
                                 </i:Interaction.Triggers>
                             </Button>
@@ -281,8 +283,8 @@
                             </Grid.ColumnDefinitions>
 
                             <TextBox Style="{DynamicResource EasyTextBox}"
-                                     Width="192"
-                                     Padding="14 11"
+                                     Width="195"
+                                     Padding="14 14 14 0"
                                      Margin="0 0 7 0"
                                      materialDesign:HintAssist.IsFloating="False"
                                      KeyDown="OnUpdateWindowExampleRussianValueTextBoxKeyDown"
@@ -308,10 +310,10 @@
 
                             <TextBox Style="{DynamicResource EasyTextBox}"
                                      HorizontalAlignment="Stretch"
-                                     Width="192"
+                                     Width="195"
                                      Grid.Column="1"
                                      Margin="7 0 0 0"
-                                     Padding="14 11"
+                                     Padding="14 14 14 0"
                                      materialDesign:HintAssist.IsFloating="False"
                                      KeyDown="OnUpdateWindowExampleEnglishValueTextBoxKeyDown"
                                      Name="uwExampleEnglishValueTextBox"
@@ -336,8 +338,8 @@
                             </TextBox>
 
                             <Button Style="{DynamicResource EasyConfirmButton}"
-                                    Height="39"
-                                    Width="39"
+                                    Height="44"
+                                    Width="44"
                                     Margin="14 0 0 0"
                                     IsEnabled="{Binding UwAddExampleButtonIsEnabled}"
                                     Name="uwAddExampleButton"
@@ -471,7 +473,7 @@
 
                             <!--Текстбокс для введения значения глагола в новом VerbPreposition-->
                             <TextBox Width="140"
-                                     Padding="14 11"
+                                     Padding="14 14 14 0"
                                      HorizontalAlignment="Left"
                                      Style="{DynamicResource EasyValidationTextBox}"
                                      materialDesign:HintAssist.Hint="Глагол*"
@@ -502,7 +504,7 @@
                             <!--Текстбокс для введения значения предлога в новом VerbPreposition-->
                             <TextBox Width="90"
                                      Grid.Column="1"
-                                     Padding="14 11"
+                                     Padding="14 14 14 0"
                                      HorizontalAlignment="Left"
                                      materialDesign:HintAssist.IsFloating="False"
                                      materialDesign:ValidationAssist.Suppress="True"
@@ -532,7 +534,7 @@
 
                             <!--Текстбокс для введения перевода нового VerbPreposition-->
                             <TextBox Grid.Column="3"
-                                     Padding="14 11"
+                                     Padding="14 14 14 0"
                                      Width="190"
                                      Style="{DynamicResource EasyValidationTextBox}"
                                      materialDesign:HintAssist.Hint="Перевод*"
@@ -591,8 +593,8 @@
                             </Grid.ColumnDefinitions>
 
                             <TextBox Style="{DynamicResource EasyTextBox}"
-                                     Width="192"
-                                     Padding="14 11"
+                                     Width="189"
+                                     Padding="14 14 14 0"
                                      Margin="0 0 7 0"
                                      materialDesign:HintAssist.IsFloating="False"
                                      KeyDown="OnAddingWindowExampleRussianValueTextBoxKeyDown"
@@ -619,10 +621,10 @@
 
                             <TextBox Style="{DynamicResource EasyTextBox}"
                                      HorizontalAlignment="Stretch"
-                                     Width="192"
+                                     Width="189"
                                      Grid.Column="1"
                                      Margin="7 0 0 0"
-                                     Padding="14 11"
+                                     Padding="14 14 14 0"
                                      materialDesign:HintAssist.IsFloating="False"
                                      KeyDown="OnAddingWindowExampleEnglishValueTextBoxKeyDown"
                                      Name="awExampleEnglishValueTextBox"
@@ -646,8 +648,8 @@
                             </TextBox>
 
                             <Button Style="{DynamicResource EasyConfirmButton}"
-                                    Height="39"
-                                    Width="39"
+                                    Height="44"
+                                    Width="44"
                                     Margin="14 0 0 0"
                                     IsEnabled="{Binding AwAddExampleButtonIsEnabled}"
                                     Name="awAddExampleButton"
